	* Re-arrange media window to make it more netbook-friendly.

	Finch:
	* Rebindable 'suggest-next-page' and 'suggest-prev-page' actions for
	  textboxes (GntEntry) to scroll through list of suggestions.
	* Rebindable 'dropdown' action for comboboxes (GntComboBox) to show the
	  dropdown list of options.

	IRC:
	* Fix non-ASCII arguments to /mode et al.  (thanks to Max Ulidtko)

	MXit:
	* Fix filename for the Shocked emoticon. (#12364)
	* Implement the new naming conventions where possible. (MXitId, etc)
	* Display a message in the Groupchat window when you invite somebody.
	* Birthday field in profile cannot be edited when server says it is
	  locked.
	* If a buddy is offline, show in their profile when last they were online.
	* Handle pushed profile update packets (ie, when changing your avatar via
	  the Gallery bot).
	* If a buddy is offline and we see from their profile that they have
	  updated their avatar, request the new avatar image from the server.
	* Fix a possible crash if a link is clicked while disconnected.
	* New MXit Moods and Emoticons.

	XMPP:
	* Allow connecting to servers that only advertise GSSAPI and expect
	  a fallback to legacy IQ authentication (broken in 2.7.0).
	* Fix a crash when receiving custom emoticons that don't adhere to
	  the specification.
	* When initiating a file transfer, don't show resources that are certain
	  to not support file transfers in the resource selection dialog.
	* Fix connecting to servers using BOSH and authenticating with
	  DIGEST-MD5 when libpurple was built with Cyrus SASL support.

	Yahoo/Yahoo JAPAN:
	* Renamed "Use account proxy for SSL connections" to "Use account proxy
	  for HTTP and HTTPS requests" and tied the option to HTTP requests too.
	* Properly detect HTTP proxy server use when the HTTP proxy is the
	  global proxy server, an account-level non-HTTP proxy server is
	  configured, and the "Use account proxy for HTTP and HTTPS requests"